--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,17 @@ h1 {
   font-size: 50px;
 }
 
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
 .link {
   color: aquamarine;
   font-size: 16px;
+}
+
+p {
+  font-size: 21px;
+  color: grey;
 }
